[package]
authors = ["kromych@github.com"]
edition = "2021"
readme = "README.md"
name = "pico-bites"
version = "0.1.0"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"

embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-time = "0.12"

usb-device = "0.2"
usbd-serial = "0.1"

rp-pico = "0.8"
rp2040-hal = "0.9"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2"

fugit = "0.3"
heapless = "0.7"

embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
mipidsi = "0.7"
display-interface-spi = "0.4"

waveshare-rp2040-zero = "0.7"
smart-leds = "0.3"
ws2812-pio = "0.7"

nb = "1.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
